--- a/PythonProject7/requirements.txt
+++ b/PythonProject7/requirements.txt
@@ -1,35 +1,7 @@
-Package            Version
------------------- ---------
-annotated-types    0.7.0
-anyio              4.9.0
-blinker            1.9.0
-certifi            2025.4.26
-charset-normalizer 3.4.2
-click              8.2.1
-colorama           0.4.6
-distro             1.9.0
-dotenv             0.9.9
-dwani              0.1.8
-Flask              3.1.1
-flask-cors         6.0.0
-groq               0.25.0
-h11                0.16.0
-httpcore           1.0.9
-httpx              0.28.1
-idna               3.10
-itsdangerous       2.2.0
-Jinja2             3.1.6
-MarkupSafe         3.0.2
-pip                24.2
-pydantic           2.11.5
-pydantic_core      2.33.2
-pydub              0.25.1
-PyPDF2             3.0.1
-python-dotenv      1.1.0
-requests           2.32.3
-sniffio            1.3.1
-SpeechRecognition  3.14.3
-typing_extensions  4.13.2
-typing-inspection  0.4.1
-urllib3            2.4.0
-Werkzeug           3.1.3
+Flask==3.0.0
+Flask-WTF==1.2.1
+Werkzeug==3.0.1
+groq==0.9.0
+python-dotenv==1.0.1
+reportlab==4.2.2
+PyPDF2==3.0.1
